--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "nappa <masa.yanagawa721@gmail.com> (https://twitter.com/bebeji_nappa)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "^5.56.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0"
+  }
 }
