--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "description": "Easily create presentation board using React.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "start": "webpack serve"
   },
   "author": "nappa <masa.yanagawa721@gmail.com> (https://twitter.com/bebeji_nappa)",
   "license": "MIT",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.56.1",
