--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "nappa <masa.yanagawa721@gmail.com> (https://twitter.com/bebeji_nappa)",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.1",
+    "sass-loader": "^12.1.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.56.1",
