--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-speaker-board": "^0.1.3"
   }
 }
