--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "react-speaker-board-next",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,13 +11,15 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-speaker-board": "^0.1.13",
-    "richmd": "^2.1.6"
+    "react-speaker-board": "^0.1.14",
+    "richmd": "^2.1.9"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "file-loader": "^6.2.0",
+    "raw-loader": "^4.0.2",
     "typescript": "4.4.3"
   }
 }
