--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "raw-loader": "^4.0.2",
     "typescript": "^5"
   },
+  "engines": {
+    "node": "20.9.0",
+    "pnpm": "8.15.1"
+  },
   "volta": {
     "node": "20.9.0",
     "pnpm": "8.15.1"
